Wed May 11 10:33:26 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* COPYING: Remove trailing-whitespaces.
	  [ci skip][fix GH-1348]

Tue May 10 21:05:45 2016  Benoit Daloze  <eregontp@gmail.com>

	* insns.def (defineclass): Also raise an error when redeclaring the
	  superclass of a class as Object and it has another superclass.
	  [Bug #12367] [ruby-core:75446]

	* test/ruby/test_class.rb: test for above.

Tue May 10 14:57:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (obj_random_bytes): base on bytes method instead of
	  rand method, not to call toplevel rand method.

Tue May 10 13:07:28 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in (-fexcess-precision=standard): before r54895 -std=c99
	  is specified and it implied -fexcess-precision=standard.
	  Now with -std=gnu99, it should be explicitly specified.
	  https://gcc.gnu.org/onlinedocs/gcc/Optimize-Options.html

Mon May  9 10:51:59 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_atfork_internal): move th to an argument.

	* thread.c (rb_thread_atfork): do not repeat GET_THREAD().

Mon May  9 10:46:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_atfork, rb_thread_atfork_before_exec): do
	  nothing unless working fork is available.

	* thread_sync.c (rb_mutex_abandon_all): define only if working
	  fork is available.

	* thread_sync.c (rb_mutex_abandon_keeping_mutexes): ditto.

	* thread_sync.c (rb_mutex_abandon_locking_mutex): ditto.

	* thread_win32.c (gvl_init): never used.

Mon May  9 07:18:06 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/{defines,ruby}.h: need to define function attributes
	  alternatives in defines.h instead of ruby.h, because they are used
	  in oniguruma.h and the header used without including ruby.h at
	  encoding library sources.

Mon May  9 06:30:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/ruby.h (CONSTFUNC, PUREFUNC): fixed build errors on